--- a/app/design/frontend/eco/default/template/catalog/category/view.phtml
+++ b/app/design/frontend/eco/default/template/catalog/category/view.phtml
@@ -1,6 +1,7 @@
 <?php
     $_helper    = $this->helper('catalog/output');
     $_category  = $this->getCurrentCategory();
+    var_dump($_category->getData('is_active')); die();
     $_imgHtml   = '';
     if ($_imgUrl = $_category->getImageUrl()) {
         $_imgHtml = '<div class="category-image"><img src="'.$_imgUrl.'" alt="'.$this->escapeHtml($_category->getName()).'" title="'.$this->escapeHtml($_category->getName()).'" /></div>';
